# ibtracs-gev-na

./: .gitignore  README.md  bayesian_gev.py  download.py  event_catalogue.py  fit_gev.py  pyproject.toml  requirements.txt
data/: README.md
figures/: named_storms.md
